# ServerAuth

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac
include/: Makefile  Makefile.am  authencrypt.h  base64.h  encode.h  hashcheck.h  httpencrypt.h  server.h  serverauth.h
src/: Makefile  Makefile.am  authencrypt.c  authserver  encode.c  encrypt.c  hash.conf  hashcheck.c  httpencrypt.c  server.c  serverauth.c
src/.deps/: authencrypt.Po  hashcheck.Po
src/html/: index.html  main.css
src/html/js/: main.js
